--- a/style.css
+++ b/style.css
@@ -2,3 +2,16 @@
   border: 1px solid black;
   background-color: lightskyblue;
 }
+
+button,
+#fake-button {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  border: 1px solid black;
+  background-color: red;
+  text-decoration: none;
+  color: white;
+  padding: 2px;
+  margin: 10px;
+  cursor: pointer;
+}
